services/sonarqube/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: sonarqube
  namespace: sonarqube
spec: {}
status: {}
