services/sonarqube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-service
  namespace: sonarqube
spec:
  selector:
    app: sonarqube
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 9191
  type: NodePort
